--- a/public/css/master.css
+++ b/public/css/master.css
@@ -354,3 +354,9 @@ th.category {
 th {
 	font-style: italic;
 }
+
+.rounded {
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
