--- a/views/layout.jade
+++ b/views/layout.jade
@@ -76,6 +76,8 @@ html
 										input#playerBarSearch(type="text" 
 										style="width:100px;margin-left:8px;border-radius:3px" onkeyup="textboxChanged(this)")
 										span#spinner
+							li
+								a(href="/standings") Standings
 							-if(envConfig.isTradingOn)
 								li
 									a(href="/trade")
