--- a/views/stattracker2.jade
+++ b/views/stattracker2.jade
@@ -3,16 +3,22 @@ extends layout
 block inlineScripts
 	script.
 		$(document).ready(function() {
-			$.get("/stattracker/linescore2/" + team.teamId, function(response) {
-				$('#hidden').append(response.html);
-				$('.webbies').quicksand( $('#hidden').find('li'), { adjustHeight: 'dynamic' } );
-			});
+			setInterval(function() {
+				$.get("/stattracker/linescore2/" + team.teamId, function(response) {
+					$('.preview').quicksand( $(response.html).find('.preview li'), { adjustHeight: 'dynamic' } );
+					$('.inProgress').quicksand( $(response.html).find('.inProgress li'), { adjustHeight: 'dynamic' } );
+					$('.final').quicksand( $(response.html).find('.final li'), { adjustHeight: 'dynamic' } );
+					var players = $.merge(response.inProgressPlayers, response.previewPlayers);
+					players = $.merge(players, response.finalPlayers);
+					players.forEach(function(p) {
+						$('[data-id="' + p.player_id + '"] .battersTillUp').text(p.battersTillUp);
+					});
+				});
+			}, 10000);
 		});
 
 block content
 	include partials/stattrackerDiv
-
-	div#hidden
 
 	| <script type="text/javascript" >
 	| var team = !{JSON.stringify(team)};
