--- a/views/home.jade
+++ b/views/home.jade
@@ -20,11 +20,11 @@ block inlineScripts
 		}
 		
 		// connect to the socket server
-		var socket = io.connect(); 
+		//var socket = io.connect(); 
 		// if we get an "info" emit from the socket server then console.log the data we recive
-		socket.on('news', function (data) {
-			console.log(data);
-		});
+		//socket.on('news', function (data) {
+		//	console.log(data);
+		//});
 
 		var lastSearchTerm;
 
