--- a/views/partials/stattrackerDiv.jade
+++ b/views/partials/stattrackerDiv.jade
@@ -1,40 +1,82 @@
 mixin stattrackerDiv(previewPlayers, inProgressPlayers, finalPlayers)
 
 	mixin player(player)
+		-var playerGameOver = player.linescore && (player.linescore.status == "Final" || player.linescore.status == "Game Over");
 		li.playerDiv(data-id=player.player_id)
 			-var classString = player.linescore && player.linescore.runner_on_base_status ? "rob_" + player.linescore.runner_on_base_status : "";
 			div.stattrackerPlayer.rounded
-				div(style="display:inline-block;width:16%")
-					img.rounded(style="width:46px;height:69px;margin:5px" src="http://mlb.mlb.com/images/players/mugshot/ph_" + player.player_id + ".jpg")
-				div(style="display:inline-block;width:40%")
-					span(style="padding-left:10px")= player.name_display_first_last
-				div(style="display:inline-block;width:44%")
-					-if(player.linescore)
-						-var gameState;
-						-if(player.linescore.status == "In Progress")
-							-gameState = player.linescore.inning_state + " " + player.linescore.inning
-							//p= player.linescore.runner_on_base_status
-							//img(class=classString)
-						-else if(player.linescore.status == "Final" || player.linescore.status == "Game Over")
-							-gameState = Final
-						-else
-							-gameState = player.linescore.time
-						div(style="display:inline-block;width:24%")
+				div.top.stattrackerInnerBox
+					div.playerHead(style="display:inline-block;width:46px")
+						img.rounded(style="width:46px;height:69px;" src="http://mlb.mlb.com/images/players/mugshot/ph_" + player.player_id + ".jpg")
+					div.playerInfo(style="display:inline-block;width:302px")
+						div.stattrackerInnerBox
+							span(style="font-size:24px" onclick="showBottom('" + player.player_id + "')")= player.name_display_first_last
+							span(style="padding-left:5px")= "Due up in: " + player.battersTillUp + " batters"
+						div(style="font-size:15px")
+							-if(player.linescore)
+								-var gameState;
+								-if(player.linescore.status == "In Progress")
+									-gameState = player.linescore.inning_state + " " + player.linescore.inning
+									//p= player.linescore.runner_on_base_status
+									//img(class=classString)
+								-else if(playerGameOver)
+									-gameState = Final
+								-else
+									-gameState = player.linescore.time
+								div
+									div(style="display:inline-block;width:24%")
+										div
+											span= gameState
+									div(style="display:inline-block;width:25%")
+										div
+											span= player.linescore.away_name_abbrev
+										div
+											span= player.linescore.away_team_runs
+									div(style="display:inline-block;width:26%")
+										div
+											span= "@"
+									div(style="display:inline-block;width:25%")
+										div
+											span= player.linescore.home_name_abbrev
+										div
+											span= player.linescore.home_team_runs
+				-if(player.linescore && (playerGameOver || player.linescore.status == "In Progress") && player.dailyStats.bo)
+					div.bottom(style="font-size:15px;display:none")
+						div(style="display:inline-block;width:14%")
 							div
-								span= gameState
-						div(style="display:inline-block;width:25%")
+								span= "H/AB"
 							div
-								span= player.linescore.away_name_abbrev
+								span= player.dailyStats.h + "/" + player.dailyStats.ab
+						div(style="display:inline-block;width:14%")
 							div
-								span= player.linescore.away_team_runs
-						div(style="display:inline-block;width:26%")
+								span= "R"
 							div
-								span= "@"
-						div(style="display:inline-block;width:25%")
+								span= player.dailyStats.r
+						div(style="display:inline-block;width:14%")
 							div
-								span= player.linescore.home_name_abbrev
+								span= "BB"
 							div
-								span= player.linescore.home_team_runs
+								span= player.dailyStats.bb
+						div(style="display:inline-block;width:14%")
+							div
+								span= "RBI"
+							div
+								span= player.dailyStats.rbi
+						div(style="display:inline-block;width:14%")
+							div
+								span= "SB/CS"
+							div
+								span= player.dailyStats.sb + "/" + player.dailyStats.cs
+						div(style="display:inline-block;width:14%")
+							div
+								span= "HR"
+							div
+								span= player.dailyStats.hr
+						div(style="display:inline-block;width:14%")
+							div
+								span= "2B/3B"
+							div
+								span= player.dailyStats.h2b + "/" + player.dailyStats.h3b
 						
 
 
